- Doctors section looks good on large device, but on small device its running into the gallery section. So thats gotta be fixed. Currently Im working on the about us page, I couldnt get a good layout with the images next to the text horizontally. So Im just going to stack the text on top of the images.

--- a/css/main.css
+++ b/css/main.css
@@ -658,9 +658,9 @@ Common Styles
 	overflow: hidden;
 	position: relative;
 }
-.work img {
+.work img {    
 	width: 100%;
-	height: 100%;
+	height: auto;
 }
 .work .overlay {
 	background: rgba(43, 153, 228, 0.88);
@@ -959,10 +959,10 @@ ul.list-default li {
 }
 .conForm .submitBnt {
 	/* background: #b3e1d2; */
-    border: 2px solid #639172;
-    border-radius: 2px;
+    /* border: 2px solid #639172; */
+    border: 2px solid #2b99e4;
     background: white;
-    color: #336142;
+    color: #2b99e4;
     
     /* border: 0; */
 	-moz-border-radius: 2px;
@@ -978,8 +978,8 @@ ul.list-default li {
 	text-transform: uppercase;
 }
 .conForm .submitBnt:hover {
-	background: #a3d1c2;
-	color: #336142;
+	background: #bbdff6;
+	color: #0b79c4;
 }
 #success_page{
 	color: #00bdbd;
